--- a/site/src/App.css
+++ b/site/src/App.css
@@ -17,7 +17,7 @@ body {
   color: white;
 }
 
-.app-content {
+.app-content, .email-checker {
   background-color: #282c34;
   display: flex;
   flex-direction: column;
@@ -27,12 +27,16 @@ body {
   color: white;
 }
 
-.App-link {
+.app-link {
   color: #61dafb;
 }
 
 h1 {
   animation: 3s infinite alternate zoom;
+}
+
+.email-checker h5 {
+  margin-bottom: 0px;
 }
 
 @keyframes zoom {
